pokedex fix: Fixed responsiveness on mobile

--- a/Bootcamp-front-end-rihappy/pokedex/assets/css/global.css
+++ b/Bootcamp-front-end-rihappy/pokedex/assets/css/global.css
@@ -13,7 +13,7 @@ main{
     align-items: flex-start;
     padding: 1rem 2rem;
     background-color: #d0d0d0;
-    min-height: 100vh;
+    min-height: 100dvh;
 }
 .content {
     width: 100%;
@@ -25,29 +25,3 @@ main{
     flex-direction: column;
     align-items: flex-start;
 }
-
-
-@media screen and (min-width: 992px) {
-    
-    main {
-        max-width: 992px;
-        min-height: 100vh;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
-    .footer{
-        max-width: 980px;
-    }
-}
-
-@media screen and (min-width: 576px) and (max-width: 992px){
-    main {
-        max-width: 576px;
-        min-height: 100vh;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
-    .footer{
-        max-width: 566px;
-    }
-}    
