--- a/Bootcamp-front-end-rihappy/pokedex/assets/css/pokedex.css
+++ b/Bootcamp-front-end-rihappy/pokedex/assets/css/pokedex.css
@@ -253,32 +253,57 @@
 .steel      {background-color: #b8b7cf;} 
 .dragon     {background-color: #6f38f6;} 
 .fairy      {background-color: #f9aec7;}
+
 @media screen and (min-width: 380px) and (max-width: 576px) {
 
-    /*.pokemons {
-        grid-template-columns: 1fr 1fr;
-    }*/
     .content {
         max-width: 576px;
         margin: 1rem auto;
         border-radius: 1rem;
     }
-    footer{
-        max-width: 100%;
+    .footer{
+        width: 100dvw;
+        max-width: 576px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0.5rem;
+        margin-left: 0;
+    }
+    .page, .pagination{
+        padding: 0;
+    }
+    .pagination{
+        padding: 0 0.25rem;
+        margin-right: 5px;
     }
     main{
-        min-height: 100vh;
+        min-height: 100dvh;
+        padding: 1rem 0.2rem;
     }
 }
 
-@media screen and (min-width: 576px) {
-    /*.pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }*/
-}
+@media screen and (min-width: 576px) and (max-width: 992px){
+    main {
+        max-width: 576px;
+        min-height: 100dvh;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
+    .footer{
+        max-width: 566px;
+    }
+}    
 
 @media screen and (min-width: 992px) {
-    /*.pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }*/
+    
+    main {
+        max-width: 992px;
+        min-height: 100dvh;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
+    .footer{
+        max-width: 980px;
+    }
 }
